--- a/local.env
+++ b/local.env
@@ -7,5 +7,5 @@ SUDO_USERS=1833279646 # List of user IDs separated by space
 DURATION_LIMIT=10 # in minutes (default: 7)
 ARQ_API_KEY="YXUZNS-FYMDGY-JKYRLN-CTEXKY-ARQ"
 UPDATES_CHANNEL= -1001557290180
-BG_IMAGE=
+BG_IMAGE=""
 
